--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -17,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,7 +39,6 @@
   "devDependencies": {
     "@types/jest": "^26.0.0",
     "axios-mock-adapter": "^1.18.1",
-    "babel-jest": "^26.0.1",
     "redux-devtools-extension": "^2.13.8",
     "ts-jest": "^26.1.0"
   }
